--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -18,8 +18,8 @@
                     </div>
                     <div class="col-9">
                         <div class="bg-info-subtle">
-                            <p class="subtitle">Guide to choose a good deck</p>
-                            <p>This post will provide some useful tips to choose a deck.</p>
+                            <a href="/filter_and_styling" class="subtitle">User interface styling and dynamic contents</a>
+                            <p>This blog page will explain how I use bootstrap 5, database and routing methods in NodeJS server to create a dynamic webpage.</p>
                         </div>
                     </div>
                 </div>
@@ -31,8 +31,8 @@
                     </div>
                     <div class="col-9">
                         <div class="bg-info-subtle">
-                            <p class="subtitle">Guide to play poker</p>
-                            <p>This post will help you learn how to play poker.</p>
+                            <a href="/db_authen" class="subtitle">New database approach and authentication</a>
+                            <p>This post will demonstrate the implementation of another database approach and authentication in user login process.</p>
                         </div>
                     </div>
                 </div>
